# SecurityAuditTool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scan.py  server.py
.github/workflows/: python-tests.yml
src/domains_scanner/: certificate_checker.py  constants.py  dns_checker.py  domain_scanner.py  domain_utils.py  geo_ip_checker.py  http_checker.py  main.py  rtt_checker.py  scan.py
src/iacs_scanner/: infra_checker.py  infra_security_scan.py
src/utils/: context_logger.py
tests/: test_certificate_checker.py  test_dns_checker.py  test_domain_scanner.py  test_domain_utils.py  test_geo_ip_checker.py  test_http_checker.py  test_rtt_checker.py  utils.py
